--- a/src/app/profile/components/user-info-card/user-info-card.component.html
+++ b/src/app/profile/components/user-info-card/user-info-card.component.html
@@ -4,7 +4,14 @@
       Editar perfil
     </button>
     <div class="user-info__avatar">
-      <img [src]="user.perfil.avatar | domSanitizer" alt="user avatar" />
+      <img
+        [src]="user.perfil.avatar | domSanitizer"
+        alt="user avatar"
+        *ngIf="user.perfil?.avatar; else icon"
+      />
+      <ng-template #icon>
+        <img src="/assets/images/user.svg" alt="empty avatar" />
+      </ng-template>
     </div>
     <div class="user-info__content">
       <h2>@{{ user.usuNickname }}</h2>
