groups and events and changes

--- a/src/app/home/components/communities/communities.component.html
+++ b/src/app/home/components/communities/communities.component.html
@@ -7,7 +7,7 @@
       >
     </div>
   </div>
-  <div class="list_communities">
+  <div class="list_data">
     <ul>
       <li *ngFor="let community of communities">
         <div class="item-thumbnail">
