--- a/src/app/profile/components/user-events-card/user-events-card.component.html
+++ b/src/app/profile/components/user-events-card/user-events-card.component.html
@@ -10,7 +10,7 @@
     >
   </div>
 </div>
-<div class="list_communities">
+<div class="list_data">
   <ul>
     <li *ngFor="let event of events">
       <div class="item-thumbnail">
