--- a/src/styles/layout/_home.scss
+++ b/src/styles/layout/_home.scss
@@ -198,7 +198,7 @@
 }
 
 //
-.list_communities {
+.list_data {
   max-width: 400px;
   margin: 0 auto;
 }
@@ -208,6 +208,7 @@
   /* margin-bottom: 20px; */
   text-align: center;
   /* box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12); */
+  margin: 0px 10px;
 }
 .communities h1 {
   margin: 0px;
@@ -232,7 +233,7 @@
 // font-weight: 100;
 // }
 /*-------------------------*/
-.list_communities ul {
+.list_data ul {
   padding: 0;
   border-radius: 2px;
   border: 0;
@@ -240,7 +241,7 @@
   position: relative;
   overflow: hidden;
 }
-.list_communities ul li {
+.list_data ul li {
   box-sizing: border-box;
   list-style-type: none;
   margin: 0;
@@ -254,28 +255,28 @@ $steps: 10;
 $gradient-color: #923594;
 // #8a178c
 $amount: 3;
-// .list_communities ul li:nth-child(odd) {
+// .list_data ul li:nth-child(odd) {
 //   background-color: #7d6c8f;
 // }
-// .list_communities ul li:nth-child(even) {
+// .list_data ul li:nth-child(even) {
 //   background-color: #e91e6394;
 // }
 @for $i from 0 through $steps {
-  .list_communities ul li:nth-child(#{$i}) {
+  .list_data ul li:nth-child(#{$i}) {
     background-color: #{darken($gradient-color, $i * $amount)};
   }
 }
-.list_communities ul li:hover {
+.list_data ul li:hover {
   background-color: #757575;
 }
-.list_communities ul li a {
+.list_data ul li a {
   color: #fff;
   text-decoration: none;
 }
-.list_communities ul li a:hover {
+.list_data ul li a:hover {
   color: #eee;
 }
-.list_communities ul li img {
+.list_data ul li img {
   width: 42px;
   height: 42px;
   position: absolute;
