--- a/src/app/profile/components/badges/badges.component.html
+++ b/src/app/profile/components/badges/badges.component.html
@@ -1,26 +1,22 @@
-<h2 class="center">Mis insignias</h2>
+<h2 class="center">Insignias</h2>
 <div class="container">
   <div class="row">
     <div *ngFor="let badge of badges" class="col-md-4">
       <div class="card-badge">
         <div class="card-b-img">
-          <img src="{{badge.image}}">
-          <h1>{{badge.title}}</h1>
+          <img src="{{ badge.icono }}" />
+          <h1>{{ badge.nombreInsignia }}</h1>
         </div>
         <div class="card-b-body">
-          <h2>{{badge.category}}</h2>
-          <p class="description">{{badge.description}}
-          </p>
-          <hr>
-          <h2>¿Como ganarla?
-          </h2>
+          <h2>{{ getInsigniaNombre(badge.idInsignia) }}</h2>
+          <p class="description">{{ badge.description }}</p>
+          <hr />
+          <h2>¿Como ganarla?</h2>
           <div class="card-b-body">
-            <p>{{badge.description_win}}
-            </p>
+            <p>{{ badge.description_win }}</p>
           </div>
         </div>
+      </div>
     </div>
-    </div>
-
   </div>
 </div>
