--- a/src/app/auth/components/restore/restore.component.html
+++ b/src/app/auth/components/restore/restore.component.html
@@ -22,7 +22,7 @@
             [class.error]="passErrors"
             placeholder="Escriba su contraseña"
             type="password"
-            formControlName="clave"
+            formControlName="usuClave"
           />
           <span class="input__error" *ngIf="passErrors">
             {{ passErrors | validationErrors }}
