--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -20,7 +20,7 @@
     </li>
     <li class="navbar__item">
       <a
-        routerLink="#"
+        routerLink="/learning"
         class="link navbar__link"
         routerLinkActive="active-route"
         [routerLinkActiveOptions]="{ exact: true }"
@@ -29,7 +29,7 @@
     </li>
     <li class="navbar__item">
       <a
-        routerLink="#"
+        routerLink="/creators"
         class="link navbar__link"
         routerLinkActive="active-route"
         [routerLinkActiveOptions]="{ exact: true }"
