--- a/src/app/home/components/communities/communities.component.html
+++ b/src/app/home/components/communities/communities.component.html
@@ -25,7 +25,7 @@
             ><a class="col-sm-7" title=" " href="{{ community.link }}">{{
               community.name
             }}</a>
-            <div class="col-sm-5"><a href="" style="float: right;">Unirme</a></div>
+            <div class="col-sm-5"><a href="{{ community.link }}" style="float: right;">Unirme</a></div>
             </span>
         </div>
         <div style="clear: both"></div>
