--- a/src/styles/layout/_home.scss
+++ b/src/styles/layout/_home.scss
@@ -5,12 +5,12 @@
   overflow: hidden;
 }
 .slider-container {
-  width: 800px;
+  max-width: 800px;
   position: relative;
   margin: 10px auto;
 }
 .slider-container-sponsors {
-  width: 500px;
+  max-width: 465px;
   position: relative;
   margin: 10px auto;
 }
