--- a/src/styles/layout/_loader.scss
+++ b/src/styles/layout/_loader.scss
@@ -16,11 +16,28 @@
   height: 20vw;
   min-width: 150px;
   min-height: 150px;
-  border: 10px solid $border-color-loader;
+  border: 10px solid #efefefef;
   border-radius: 50%;
-  border-left: 10px solid $color-p-darken;
+  border-left: 10px solid #521e87;
   animation-duration: 600ms;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
   animation-name: spin;
+  width: 20vw;
+  height: 20vw;
+  min-width: 150px;
+  min-height: 150px;
+  border: 10px solid #efefefef;
+  border-radius: 50%;
+  border-left: 10px solid #521e87;
+  animation-duration: 600ms;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-name: spin;
+  border-image-slice: 1;
+  border-image-source: linear-gradient( 90deg, #521e87 0%, #f1b406 100%);
+  background: linear-gradient( 90deg, #521e87 0%, #f1b406 10%);
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: destination-out;
+  mask-composite: exclude;
 }
