--- a/src/styles/layout/_home.scss
+++ b/src/styles/layout/_home.scss
@@ -138,7 +138,7 @@
   color: #ffffff;
   font-family: Arial;
   font-size: 15px;
-  padding: 16px 31px;
+  padding: 15px;
   text-decoration: none;
   text-shadow: 0px 1px 0px #8a178c;
 }
