--- a/src/app/profile/components/submenu/submenu.component.scss
+++ b/src/app/profile/components/submenu/submenu.component.scss
@@ -6,3 +6,16 @@ a.icon svg {
 svg path {
     fill: white;
 }
+
+.submenu_color_1{
+    background-color: #521e87;
+}
+.submenu_color_2{
+    background-color: brown;
+}
+.submenu_color_3{
+    background-color: #00275a;
+}
+.submenu_color_4{
+    background-color: #bf6845;
+}
