--- a/src/app/profile/components/user-badges-card/user-badges-card.component.html
+++ b/src/app/profile/components/user-badges-card/user-badges-card.component.html
@@ -1,21 +1,23 @@
 <div class="badges-card">
-  <div class="container" *ngIf="badge$ | async as badge; else empty">
+  <b class="subtitle">Insignias</b>
+  <div class="container list" *ngIf="badge$ | async as badge; else empty">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-2">
         <div class="card-badge">
           <div class="card-b-img">
+            <b>{{ badge.nombreInsignia }}</b>
             <img src="{{ badge.icono }}" />
-            <h1>{{ badge.nombreInsignia }}</h1>
-          </div>
-          <div class="card-b-body">
-            <h2>{{ getInsigniaNombre(badge.idInsignia) }}</h2>
-            <p class="description">{{ badge.description }}</p>
-            <hr />
-            <h2>¿Como ganarla?</h2>
             <div class="card-b-body">
-              <p>{{ badge.description_win }}</p>
+              <h2>{{ getInsigniaNombre(badge.idInsignia) }}</h2>
+              <p class="description">{{ badge.description }}</p>
+              <hr />
+              <h2>¿Como ganarla?</h2>
+              <div class="card-b-body">
+                <p>{{ badge.description_win }}</p>
+              </div>
             </div>
           </div>
+
         </div>
       </div>
     </div>
@@ -23,7 +25,7 @@
   <ng-template #empty>
     <div class="container">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-12">
           <div class="card-badge">
             <div class="card-b-img">
               <h1>Gana tu primera insignia</h1>
