--- a/src/styles/layout/_home.scss
+++ b/src/styles/layout/_home.scss
@@ -288,7 +288,7 @@ $amount: 3;
   display: inline-block;
   vertical-align: middle;
 }
-.slider-photo img {
+.slider-container.slider-photo img {
   height: 250px;
   width: 250px;
 }
