--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -4,34 +4,39 @@
     <div class="slider-arrow-left arrowLeft">
       <a (click)="bleft()">
         <svg width="16" height="30" class="svg-arrow">
-          <polyline style="
-            stroke-linejoin: miter;
-            stroke: #00275a;
-            stroke-width: 3;
-            fill: none;
-          " points="15 2, 2 15, 15 28" />
+          <polyline
+            style="
+              stroke-linejoin: miter;
+              stroke: #00275a;
+              stroke-width: 3;
+              fill: none;
+            "
+            points="15 2, 2 15, 15 28"
+          />
         </svg>
       </a>
     </div>
     <div class="slider-arrow-right arrowRight">
       <a id="bright" (click)="bright(creators)" class="counter">
         <svg width="16" class="svg-arrow">
-          <polyline style="
-            stroke-linejoin: miter;
-            stroke: #00275a;
-            stroke-width: 3;
-            fill: none;
-          " points="2 2, 14 15, 2 28" />
+          <polyline
+            style="
+              stroke-linejoin: miter;
+              stroke: #00275a;
+              stroke-width: 3;
+              fill: none;
+            "
+            points="2 2, 14 15, 2 28"
+          />
         </svg>
       </a>
     </div>
-
   </div>
   <div #frame id="frame">
-    <div #slider id="slider" style="left: -{{counts}};">
+    <div #slider id="slider" style="left: -{{ counts }};">
       <!-- Box start -->
       <div *ngFor="let creator of creators" class="slider-box slide">
-        <div class="slider-photo">
+        <div class="slider-container slider-photo">
           <!-- <a href="{{creator.link}}"> -->
           <div>
             <img src="{{ creator.image }}" />
@@ -51,18 +56,18 @@
 </div>
 <div class="select-sliders">
   <div class="sel">
-    <span class="radio r" (click)="counts ='0%'"></span>
+    <span class="radio r" (click)="counts = '0%'"></span>
   </div>
   <div class="sel">
-    <span class="radio r" (click)="counts ='20%'"></span>
+    <span class="radio r" (click)="counts = '20%'"></span>
   </div>
   <div class="sel">
-    <span class="radio r" (click)="counts ='50%'"></span>
+    <span class="radio r" (click)="counts = '50%'"></span>
   </div>
   <div class="sel">
-    <span class="radio r" (click)="counts ='80%'"></span>
+    <span class="radio r" (click)="counts = '80%'"></span>
   </div>
   <div class="sel">
-    <span class="radio r" (click)="counts ='100%'"></span>
+    <span class="radio r" (click)="counts = '100%'"></span>
   </div>
 </div>
