--- a/src/app/home/components/communities/communities.component.html
+++ b/src/app/home/components/communities/communities.component.html
@@ -1,4 +1,4 @@
-<div class="col-sm-3 communities">
+<div class="col-sm-4 col-lg-3  cl communities">
     <div class="f-title">
         <div class="row">
             <h1 class="col-sm-8">Comunidades</h1>
