--- a/src/app/home/components/layout/layout.component.html
+++ b/src/app/home/components/layout/layout.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <app-communities></app-communities>
 
-    <div class="col-sm-8 center">
+    <div class="col-sm-8 col-lg-9 center">
       <h1>Bienvenidos a Community Fest and Code</h1>
       <h2>¡Conoce gente, aprende y gana!</h2>
       <p>
