--- a/src/app/profile/components/user-activities-card/user-activities-card.component.html
+++ b/src/app/profile/components/user-activities-card/user-activities-card.component.html
@@ -1,5 +1,7 @@
 <!-- <p>user-activities-card works!</p> -->
-<div class="container">
+<div class="">
+  <div class="">
+    <div class="badges-card col-md-12">
   <b class="subtitle">Actividad Reciente</b>
   <div class="activ row">
     <a class="col-sm-8">
@@ -12,4 +14,5 @@
         fill="black" />
     </svg>
   </div>
+</div>
 </div>
