--- a/src/app/profile/components/user-info-card/user-info-card.component.html
+++ b/src/app/profile/components/user-info-card/user-info-card.component.html
@@ -1,4 +1,7 @@
-<div class="user-info__wrapper" *ngIf="user$ | async as user">
+<!-- <p>user-activities-card works!</p> -->
+<div class="">
+  <div class="">
+<div class="user-info__wrapper col-sm-12" *ngIf="user$ | async as user">
   <article class="user-info">
     <button class="link user-info__edit" (click)="goEdit()">
       Editar perfil
@@ -43,4 +46,6 @@
       </ul>
     </div>
   </article>
+</div>
+</div>
 </div>
