--- a/src/styles/helpers/_mixins.scss
+++ b/src/styles/helpers/_mixins.scss
@@ -1,6 +1,6 @@
 %card {
-  position: relative;
-  width: 92%;
+  // position: relative;
+  // width: 92%;
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
