--- a/src/app/profile/components/profile/profile.component.html
+++ b/src/app/profile/components/profile/profile.component.html
@@ -1,8 +1,10 @@
-<div class="profile__wrapper">
-  <app-user-info-card></app-user-info-card>
-  <div class="profile__principal">
+<div class="container">
+<div class="profile__wrapper row">
+  <app-user-info-card class="profile__principal col-sm-4 col-md-3 col-lg-3 "></app-user-info-card>
+  <div class="profile__principal col-sm-4 col-md-6 col-lg-6" >
     <app-user-badges-card></app-user-badges-card>
-    <app-user-activities-card></app-user-activities-card>
+    <app-user-activities-card ></app-user-activities-card>
   </div>
-  <app-user-events-card></app-user-events-card>
+  <app-user-events-card class="col-sm-4 col-md-3 col-lg-3"></app-user-events-card>
+</div>
 </div>
